use of generics and replaced new Boolean by Boolean.valueOf
git-svn-id: svn+ssh://svn.code.sf.net/p/jedit/svn/jEdit/trunk@11480 6b1eeb88-9816-0410-afa2-b43733a0f04e